--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Alien::JPCRE2.
 
-0.001000 2017-07-01
+0.001000 2017-07-03
 
     - Initial Release!
-    - Linux Support
+    - Linux & Windows Support
