--- a/Changes
+++ b/Changes
@@ -3,4 +3,4 @@ Revision history for Alien::JPCRE2.
 0.001000 2017-07-03
 
     - Initial Release!
-    - Linux & Windows Support
+    - Linux Support
