--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Alien::JPCRE2.
 
+0.004000 2017-07-13
+
+    - Alien::PCRE2 Dependency, Require At Configure Time
+
 0.003000 2017-07-13
 
     - Test Suite, Skip `make check` On System Install
