--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Alien::JPCRE2.
 
+0.006000 2017-07-21
+
+    - Windows, Enable -DPCRE2_STATIC Macro To Fix Build Errors
+
 0.005000 2017-07-20
 
     - Disable C++11 Features, Support Older Compilers
