--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Alien::JPCRE2.
 
+0.007000 2017-07-25
+
+    - Windows, Properly Require Alien::gmake & Alien::MSYS
+    - Properly Require Test2::Suite & Test2::V0
+    - Require Alien::PCRE2 v0.013 For Bug Fixes
+
 0.006000 2017-07-21
 
     - Windows, Enable -DPCRE2_STATIC Macro To Fix Build Errors
