--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Alien::JPCRE2.
 
+0.008000 2017-07-25
+
+    - Properly Require Test2::Suite & Test2::V0, Part 2 (Thanks Grinnz)
+    - Compatibility With Older Versions Of ExtUtils::MakeMaker (Thanks Grinnz)
+
 0.007000 2017-07-25
 
     - Windows, Properly Require Alien::gmake & Alien::MSYS
